Enhance store forms with reactive forms and validation
Integrate reactive forms for store modification, adding validation and error handling. Improve user experience with dynamic feedback and support for resetting forms. Update service to handle store updates and refine form submission logic.

--- a/src/app/moduleAdmin/pages/StoreSection/store-ajout/store-ajout.component.html
+++ b/src/app/moduleAdmin/pages/StoreSection/store-ajout/store-ajout.component.html
@@ -66,6 +66,7 @@
         </div>
         <div class="d-grid gap-2 d-md-flex justify-content-start mt-5">
           <button routerLink="/admin/stores" type="button" class="btn btn-secondary btn-lg px-4 me-md-2">Retour</button>
+          <button type="reset" class="btn btn-outline-secondary btn-lg px-4 me-md-2" (click)="clearform()">Annuler</button>
           <button type="submit" class="btn btn-success btn-lg px-4 me-md-2" >Ajouter</button>
         </div>
       </form>
