--- a/src/app/moduleAdmin/pages/StoreSection/store-modify/store-modify.component.html
+++ b/src/app/moduleAdmin/pages/StoreSection/store-modify/store-modify.component.html
@@ -3,34 +3,75 @@
     <h1 class="display-5 fw-bold text-body-emphasis lh-1 mb-3">{{store.name}}</h1>
 
     <div class="col-lg-6">
-      <form>
+      <form [formGroup]="storeForm" (ngSubmit)="onSummit()" novalidate >
         <div class="mb-3">
           <label for="storeName" class="form-label">Nom</label>
-          <input type="text" class="form-control" id="storeName" [(ngModel)]="store.name" name="lastName">
+          <input type="text" class="form-control" id="storeName"  formControlName="name"
+                 [class.is-invalid]="storeForm.get('name')?.invalid && storeForm.get('name')?.touched"
+                 [class.is-valid]="storeForm.get('name')?.valid && storeForm.get('name')?.touched"
+          >
+          <div *ngIf="storeForm.get('name')?.invalid && storeForm.get('name')?.touched" class="invalid-feedback">
+            Le nom du magasin est obligatoire
+          </div>
         </div>
-        <div *ngFor="let detail of addressDetail" class="mb-3">
-          <label for="{{detail.label}}" class="form-label">{{detail.label}}</label>
-          <input type="text" class="form-control" id="address" [(ngModel)]="detail.value" name="{{detail.label}}">
+        <div formArrayName="addressDetails">
+          <div *ngFor="let detail of addressDetails.controls; let i =index" [formGroupName]="i" class="mb-3">
+            <label [for]="'address-' + i"  class="form-label">
+              {{detail.get('label')?.value}}</label>
+            <input type="text" class="form-control" [id]="'address-' + i"   formControlName="value"
+                   [class.is-invalid]="detail.get('value')?.invalid && detail.get('value')?.touched"
+                   [class.is-valid]="detail.get('value')?.valid && detail.get('value')?.touched"
+            >
+            <div *ngIf="detail.get('value')?.invalid && detail.get('value')?.touched" class="invalid-feedback">
+              {{detail.get('label')?.value}} est obligatoire
+            </div>
+          </div>
         </div>
         <div class="mb-3">
           <label for="phone" class="form-label">Téléphone</label>
-          <input type="text" class="form-control" id="phone" [(ngModel)]="store.telephone" name="phone">
+          <input type="text" class="form-control" id="phone"  formControlName="telephone"
+                 [class.is-invalid]="storeForm.get('telephone')?.invalid && storeForm.get('telephone')?.touched"
+                 [class.is-valid]="storeForm.get('telephone')?.valid && storeForm.get('telephone')?.touched"
+          >
+          <div *ngIf="storeForm.get('telephone')?.invalid && storeForm.get('telephone')?.touched" class="invalid-feedback">
+            Le téléphone est obligatoire
+          </div>
         </div>
         <div class="mb-3">
           <label for="email" class="form-label">Email</label>
-          <input type="text" class="form-control" id="email" [(ngModel)]="store.email" name="email">
+          <input type="text" class="form-control" id="email"  formControlName="email"
+                 [class.is-invalid]="storeForm.get('email')?.invalid && storeForm.get('email')?.touched"
+                 [class.is-valid]="storeForm.get('email')?.valid && storeForm.get('email')?.touched"
+          >
+          <div *ngIf="storeForm.get('email')?.invalid && storeForm.get('email')?.touched" class="invalid-feedback">
+            L'email est obligatoire
+          </div>
         </div>
         <div class="mb-3">
-          <label for="manager" class="form-label">Téléphone</label>
-          <input type="text" class="form-control" id="manager" [(ngModel)]="store.manager" name="manager">
+          <label for="manager" class="form-label">Gérant</label>
+          <input type="text" class="form-control" id="manager" formControlName="manager"
+                 [class.is-invalid]="storeForm.get('manager')?.invalid && storeForm.get('manager')?.touched"
+                 [class.is-valid]="storeForm.get('manager')?.valid && storeForm.get('manager')?.touched"
+          >
+          <div *ngIf="storeForm.get('manager')?.invalid && storeForm.get('manager')?.touched" class="invalid-feedback">
+            Le gérant est obligatoire
+          </div>
         </div>
-
+        <div class="alert-wrapper col-lg-8  mx-auto mt-5">
+          <!-- Alert -->
+          <div *ngIf="alertMessage" [class]="'alert ' + alertType + ' d-flex justify-content-between align-items-center'" role="alert">
+            {{ alertMessage }}
+            <button type="button" class="btn-close" aria-label="Close" (click)="closeAlert()"></button>
+          </div>
+        </div>
+        <div class="d-grid gap-2 d-md-flex justify-content-start mt-5">
+          <button routerLink="/admin/stores" type="button" class="btn btn-secondary btn-lg px-4 me-md-2">Retour</button>
+          <button type="reset" class="btn btn-outline-secondary btn-lg px-4 me-md-2" (click)="clearform()">Annuler</button>
+          <button type="submit" class="btn btn-success btn-lg px-4 me-md-2" >Modifier</button>
+        </div>
       </form>
 
-      <div class="d-grid gap-2 d-md-flex justify-content-start mt-5">
-        <button routerLink="/admin/stores" type="button" class="btn btn-secondary btn-lg px-4 me-md-2">Retour</button>
-        <button type="button" class="btn btn-success btn-lg px-4 me-md-2" (click)="modifyStore()">Modifier</button>
-      </div>
+
     </div>
   </div>
 </div>
