--- a/src/app/pages/payment-matt/confirmation/payment-confirmation-matt/confirmation.component.html
+++ b/src/app/pages/payment-matt/confirmation/payment-confirmation-matt/confirmation.component.html
@@ -1,9 +1,88 @@
-<app-info-confirmation></app-info-confirmation>
-<label class="spliter">---------------------------------------------------------------------------------</label>
-<div class="container frame">
-  <form class="form-design">
-    <app-cart-confirmation></app-cart-confirmation>
-    <app-cout-total-confirmation></app-cout-total-confirmation>
-    <a type="submit" [routerLink]="['/home']" class="button-close">Fermer cette fenêtre</a>
-  </form>
+<div class="container my-5">
+  <div class="row">
+    <div class="col-12 col-md-8 mx-auto">
+      <form class="form-design">
+        <h3 class="text-center mb-4">Merci pour votre confiance !</h3>
+
+        <div class="mb-3">
+          <label for="NumConfirmation" class="form-label">Voici le numéro de confirmation de votre achat :</label>
+          <input type="text" id="NumConfirmation" class="form-control" readonly value="12345ABC" />
+        </div>
+
+        <div *ngIf="userInfo">
+          <div class="mb-3">
+            <label for="Nom" class="form-label">Nom :</label>
+            <input type="text" id="Nom" class="form-control" [value]="userInfo.name" readonly />
+          </div>
+        
+          <div class="mb-3">
+            <label for="shippingAddress" class="form-label">Adresse de livraison :</label>
+            <input type="text" id="shippingAddress" class="form-control" [value]="userInfo.address" readonly />
+          </div>
+        </div>
+
+        <h5>Quand...</h5>
+        <table class="table">
+          <tr>
+            <td>Livraison CoD</td>
+          </tr>
+          <tr>
+            <td>Temps de livraison : 5 à 10 jours ouvrables</td>
+          </tr>
+        </table>
+
+        <h5>Détails de votre commande</h5>
+          <div *ngIf="shoppingCart.length > 0; else emptyCart" class="table-responsive">
+            <table class="table">
+              <thead>
+                <tr>
+                  <th>Article</th>
+                  <th>Quantité</th>
+                  <th>Coût avant taxe</th>
+                </tr>
+              </thead>
+              <tbody>
+                <tr *ngFor="let item of shoppingCart">
+                  <td>{{ item.name }}</td>
+                  <td>{{ item.quantity }}</td>
+                  <td>{{ (item.price * item.quantity) | currency }}</td>
+                </tr>
+              </tbody>
+            </table>
+          </div>
+
+          <ng-template #emptyCart>
+            <p>Votre panier est vide.</p>
+          </ng-template>
+
+        <!-- Totaux alignés à droite -->
+        <div class="d-flex flex-column align-items-end totals-section">
+          <div class="mb-2">
+            <label for="totalBeforeTax" class="form-label me-2">Total (avant taxe) :</label>
+            <input type="text" id="totalBeforeTax" class="form-control form-control-sm d-inline-block totals-input" [value]="totalBeforeTax | currency" readonly />
+          </div>
+
+          <div class="mb-2">
+            <label for="tps" class="form-label me-2">TPS :</label>
+            <input type="text" id="tps" class="form-control form-control-sm d-inline-block totals-input" [value]="tps | currency" readonly />
+          </div>
+
+          <div class="mb-2">
+            <label for="tvq" class="form-label me-2">TVQ :</label>
+            <input type="text" id="tvq" class="form-control form-control-sm d-inline-block totals-input" [value]="tvq | currency" readonly />
+          </div>
+
+          <div class="mb-2">
+            <label for="totalTtc" class="form-label me-2">Total TTC :</label>
+            <input type="text" id="totalTtc" class="form-control form-control-sm d-inline-block totals-input" [value]="totalTtc | currency" readonly />
+          </div>
+        </div>
+
+        <!-- Bouton de retour à la page d'accueil -->
+        <div class="d-flex justify-content-center">
+          <a [routerLink]="['/home']" class="btn btn-secondary mt-4">Fermer cette fenêtre</a>
+        </div>
+      </form>
+    </div>
+  </div>
 </div>
